# cosmodata

./: README.md  setup.cfg
.github/workflows/: ci.yml
cosmodata/: __init__.py  base.py  util.py
cosmodata/groups/: fraud.csv  fraud.json
docsrc/: index.rst
misc/: code_folders_analysis.json  data_folders_info.json  make_data_ledger_from_sources.ipynb  make_data_ledger_from_sources.md  scrap.ipynb
misc/_data_folders_info/: eurovis.json  github_repos.json  harris_vs_trump.json  hcp.json  lmsys-chat-1m.json  new_years_resolutions.json  prompt-injections.json  quotes.json  spotify_playlists.json  wildchat.json  wordnet_words.json
misc/data_folders_info/: eurovis.json  github_repos.json  harris_vs_trump.json  hcp.json  lmsys-chat-1m.json  new_years_resolutions.json  prompt-injections.json  quotes.json  spotify_playlists.json  twitter_sentiment.json  wildchat.json  wordnet_words.json
misc/project_info_pickles/: eurovis.pickle  github_repos.pickle  harris_vs_trump.pickle  hcp.pickle  lmsys-chat-1m.pickle  new_years_resolutions.pickle  prompt-injections.pickle  quotes.pickle  spotify_playlists.pickle  twitter_sentiment.pickle  wildchat.pickle  wordnet_words.pickle
