[metadata]
version = 0.0.1
description = A portal to data sources
root_url = https://github.com/cosmograph-org/cosmodata
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = cosmodata
display_name = cosmodata

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    pandas
    graze
    tabled
		

